Fixes logo position on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -46,3 +46,9 @@ html,
   background: url(../img/logo.png) no-repeat center center;
   background-size: 45px auto;
 }
+
+.romeoLogoContainer .content {
+  position: relative;
+  top: 5px;
+  left: 5px;
+}
